this is my commit

--- a/Ex_2/EX2.ipynb
+++ b/Ex_2/EX2.ipynb
@@ -4,17 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exrecise 2"
+    "# Exrecise 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import linear_model\n",
+    "from scipy import optimize\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function scipy.optimize.optimize.fmin_bfgs>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimize.fmin_bfgs"
+   ]
   }
  ],
  "metadata": {
