--- a/Ex_3/Ex3.ipynb
+++ b/Ex_3/Ex3.ipynb
@@ -1,13 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,16 +14,129 @@
     "from sklearn import linear_model\n",
     "from scipy import optimize\n",
     "from sympy import *\n",
+    "from scipy.io import loadmat\n",
     "%matplotlib inline"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Multi-Class Classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = loadmat(\"ex3data1.mat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "X = data['X']\n",
+    "y = data['y']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Visualize The Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABECAYAAACRbs5KAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGedJREFUeJztnWl8FFW6h5/qLTsJIQlZWAJhSVjc\nEFERWXRcEARx37dBRx0VmXGcGVznp+MV1xFmXFBxAEdFRREuogiDIAp4ATEgkLCEhIRACCSEhHTS\n3XU/vKcqCSKGThOxPc8X+HWqu06dOvWe/7ucU4Zpmmg0Go3ml4/j526ARqPRaEKDNugajUYTJmiD\nrtFoNGGCNugajUYTJmiDrtFoNGGCNugajUYTJmiDrtFoNGGCNugajUYTJmiDrtFoNGGCqzVPdmH6\n7/WyVI1GozlKPimZbDTnOK3QNRqNJkxoVYX+S8Te66au/scP8rgxjGZNoBqNJoxplr1ojFM0teEK\njSnWBv0ImKYJPh8AO6/JAWDYLcvZsD8VgL2vdQIg8bMtmMrXCYVhN02zYUBYNzrgxzxYK3/3+wFw\nREViREa2+Hyao8M0TfB65f+13oY/uN0A9j0xnK3rAJv+gPxbUwNqjDRumxEdJe36FYkP0zRBPTcB\ndc8Mj+eY3CPTNDEc8ntVg7sDUDrAySUXfA1ApEOe6WmrTyduXQQAGZ/vky8XlmJEeFrcBh1y0Wg0\nmjDBaM3tc1uSFLXbGTAhoNRHvahn0+/HiJQZz1AqKRSYtbXsvK43AFP/8DwABb52VPijATgpogiA\nG1+8j4w3N8j5WzDLWtdoOBx4e6YDELFlNwC+tLaUDIkDoD5Gjk9e6yd2fq58J0Y+bG1V+HPRZDz8\nGI4GJRoyz0mds+bUTAB29VfjzQFxBfL35P/ukOMr90NERMjO/6PtUsqclEQAdg5tx8EUNZYCct7Y\n7SYpn22X4y2l2kw3/ydtRCvegyNhmmaDZ6I8awIm+0b0AmBftuqLQkheLsrYKNsbsraZ3jq2/048\n+Zm3P2t/Hm1ImyIbnaJGddmEHRcDsGdCJp5vt0hbDuN166SoRqPR/Mo4rmPoh4slG3ExlJ8pMex9\nOTJpeXpVEvN+GwAS5+fJcS1Q6qaa3QNdOjB67GIAvvNmADBp4uVE7BdFdM5DXwIw8salrPmwi3xX\nxetaNON73EQ+uhOASKdcf3rURqak/BeARIf0xawDHXjkvDEA5DxXLufftz/sVPoPEk1moEHFxIm3\nZDZWgnYs+aCt1Exr/ARxXw49//Y7chh77TwAhkRvAiDC8FPkiwfgsatGAnBgfm8yZsjfTUMlv47F\nvVGKe+uVotDfvG4S+wPSP+2c1QCU+2O4/awbAch5dr+0qWzfEdtje4zWs+Rygreu6UFOJ3iO8KxZ\neZ9ab8M9CFEfHG5c+HIyASgeIh5r8tAS7st8G4Dh0bsAWFfn5ncv3A1A+nT5zAxRYUP9iQcAiHOI\nKi/ze3im9DwAvlrQBwBfjMn4C/4XgIkdPwbgnscupfrhrgC4vysAgvP2j0uDbt8ov5+6E8VQbrnW\nCcCtA5ZyYdxMAFbVZgKQ6S5jXqcTAchbKYlKs6Iq6IFjGeXCi+KZ2nYlAGPWy8OQ8lkh/lIZBNOH\nnCX/Dn+Jz88aCEDiXAm90JJkZV09m5bLdQ8b9i0AHSP3MmT2HwBwV8h1dTijmC+GPwfA+aV/AqDL\nP/aCs+XJlcNhu/aWO9s48Ralkkwhcqvtc9XXgVuup753ZwBqUyLYdcVBAJ485SMAMlz77O/m1bUH\n4JFlo2m/SIZ424/Xyx897uAne1Pa5O19kDFx6wAY/Pk4AJK+dLOnv/THP86dAUDKPVXcGi2Go/Mr\nG+UnHEboQw9qMnPUyb+3vHE3mTNljO48V/ritftf4JlB8ty8PFVEgHt3OUd00tV9Lh2VBcD5dyzj\nqzIxOk6H9EX7qCpuTV0CQDtHjfyuEaDMLwZ1/PrLpW1zEmk/X0KUViK5JYa9cRiovk8mACWDorjk\niqUAXJHwDQAdnQEWHRQBOLtaRNngqO3UpKnvO0J4L5wOUt+W52BwxXgAYgpcdJwnYZ2swu/VcU6m\nbJNJP/JOmYxe7TqLoWfeD0CnFTK2gzHo4SXlNBqN5lfMcaXQGytzgPILezDq/kUAvBK/CoAxa8by\n/qJhAMRvFQWxu5+L126cDMBtl58GQOYb1Q0u49EqIlV65K6CsoB0Uec2ogArk1JBKXRnjRzX2VXD\nnpPkq21nB6yLOerzWsebgQDdnxZXvWiqqIpNXfuQvTIfgECluMxVl/Rj70SlNntXHdW5jhbTNDEz\nkgE40EWSs1UdnThrpY9TPyuW4w5Ut6im1gp3kSAhtJ3np1E9SNzYy3quBqBTRDm76iW88cX+ngAU\nVifavzEkSfpu9Xkv8u4ZUj428bzzpZ3zPCQslH7EKV7fT90n+76o68p4x83UPjLO5g6bBMANy8eT\n/Sfxzp4ccQMAF/x5CY/c9BYAT5VfA0D7D/Iwm3neI9Ek3KDalTl5fcPflYfjTRSFXm86eat0AADu\n0kp1YT+h5xzSzna5orxnzzyL2vbyu+790vatKX5yd6cBUFMg98xT4YA+Mh6v7SlKecRf13J12n0A\ndHlls30NQfeBz0fNAPEc0ifI773aYQ7q6WNLfVsArvv2MmJmylipHCPj6Mz+LxPXR0KUVujOHnct\nwHC5iF0mic3sRRKaMpwO28O0EuT4fKTPLwVg4VWSRB0Tu7XF5wet0DUajSZsOG4UeuNFPMU3ZAMw\n4Y63KPPJrD96ksSIO71XhK9wo/UlAFw5ZxLnkBmx5wWivrzTI8Ba9OEMTik760yqAjK7jktbIP/2\nvov4b9VsrkRSjOHAnyCfhSLhYxiGrQYpF88geleZPcM7YiU+GbWnngXVUpLldAZ++EOhxOdj2xhR\nOiNHLAdglzeOrOg9AEzrdTYA2U8XYqok1eH64nCxces40x/AaCPqP+9vcq43T5/MaRHS0Xn1co8v\nnnUfWR+o5LP6Pee+GvscczqcA8Brpw7n/CukrSuVkp5xam/mb5Hch2NbiXyhuTF1pWhj8vYSQMbI\nS2VDAGi3rsb2TBI+llLSz3yDuOEZKV/zjJbyU2NuRIvUoK3M42QMbLk5Fc8+aUvHqeq5cDhxtJVk\ncW0P6adEZy1r1kleJqdymzruJzwTdV9c+VKG2WlNNYZH7plZpxRobAxGjEpMVyovrdaLI6kdAEs7\niCcz+8ETuOWKTwH4dMlgADxrt8FRxont8dOuLQkPFAIwIUMS1E4DHigcBUDhy+KZdViwFV83eW76\nZ4rnFgCSotV4CXE+wxoDh/NSG8f9t10tcf2pae8BsN3nxGUNYUfwNkQrdI1GowkTjhuFjt8PqRKj\nzbpEVPaSymw2jRcFmrH8/+QwgAF9ASg8LxaAe6+aTZwhqmdNnlRC5NRuDz6DrSo20uYUctu51wPg\nUgo4fW0FplLK/kiZcbf6XCSsVkojEGTc/hDs71szfaMZP6BUyoF0D1e3WQvASzvPbdH5fgxbVbhc\nZL0ppZRrPzkBAPfOfWw7RWKADzwh5VdT1o4i+cPv1XdVm/0BOy9iKfCqgV2IzVex3PIK68LwJ8o9\nvbmPLJeuCERzzroLAdi9XGK12S9vbVhyfxgvIGKPVBVkLNrH3LjTAbjxuq8AuDJuHXNjJQfjOdKC\nmMN2hvR7oE0UnTwSgy2pTQDA4W2kupXCCrgNO6brdoTIg1JtNtVCumtGfMFnO8Wj5WOJG1NaxtY7\nRKHOGiQL4i5f81uyXz3Q5DoMo3mPv606E+Lt8eBQ2wiYpolZI16A7UFGRmKq8kbHevEGKnP7cEpO\nAQBzEsSD8hy6PUFzUG2vT2vDnzt+0ORPl+XeTPxEGT/xSyV2T9dO7LhP7s0ryVL2W2s62LxTbE22\nr+To2xAs1jMQHU3qIPFmurml727bNpqM+eLFofo2GI4jgx7A10YMaVasuPFFB9tS2VU+qxp6qhzX\nt4qhmVJr/nA7eUiTnQeZsvdMALq/3qhWuZkD9lDsJJi3jo6Pq89M+cwoLoWe4rqecookY3K9HUj9\nUoyInfhoBYwA1Kh2pXwdWtfx0AQ1QKBMjJizRBI6ftMkskxc6+I6MSbVGQbJ7eVh8XaQsEl5rwgq\nT5D7kpwuxrusxKTnv+T+OK0TuFw4i+Xe//cuuZ+fJA0hLlcGemyFqul2Og9b0mW3WYU0akf0p99Q\nCUMkOOSzSeVn4q5QBuhoJ3yVzHTuKOM/xRJKeL6blALeMHA8qetkPAT6iYHNvmc9+fXSP/vnymQU\nW7uxyeR8tNhhrGJJzM8t6sPd3aRw4LUcKUf0np7CfVdLOee4/CsBSP27S8Zuo+sI6vyHCBXDMA4b\n0rTbqY6P61POlwckgR1RXh98O1TYy3mgjtUHMwEYHivJYPP9JDxFIjo2PtcfgAH9N/FosvTPXhU+\nTXbWEbFBTUhWXf2RaumDoMnzc8iq5u8fTeXDbv8EYHO92LfNH3Uno0RCdQ4VwgoGHXLRaDSaMOH4\nUegeN67N4v7MnX0GALdc/in97t/e5LBvKjJZViwKeW257HcyI2cab68Q1zonT1RSS1SQjcPA2CQu\no7XDIYZBRR9xs5/q+CYA1397MxlKMYVyL5lDscswlfqpae9gSrkk+Np+p8IWIUjKmqZpq4ny4T0A\nKDstQPxGUVSRe8XtrYs1qBwiiyDeSpQFWFnX7SJ3TEcADvpFEe2pi2F1UQdp3luiWHstKcKsV0pN\nqTjDMDADqixuXYH86/c3qKcjlPuZPp+9YnDbeFmR98BV7zMsWsrB3q48GYCFzw+kXYFa4HGU3pTt\nudXV4XxIygEffUoWiNx/17s8ExA13PFyOefTGfMZV3QRACmrZMUmgRaU6h2GPYUJDOxbAMDKByX8\nVlCdyEmR8ty8NHs0AKkbcu3kZWtgJX7NTHlGR3TKZVWFLPpz71XZv2DGqvKqnKX7eLewHwCjeski\nr/v/8h/q/yzPfW+P2JI4Rz1VARk/dUq/7vW78VhVvmboiglMn69hpbgKidGuLfXtpbBj8/XSthlD\nXyFRrQA/d4YsTOs2Pb9FoRYLrdA1Go0mTDhuFLphGPae4l1fKwBg3oph+COtZc2iGKMW5eK+ThTy\n3fe/A8DkPWeT9Y7vB793tDQpqQOMxLaUXNENAK9at9L+m3qqr5BknhWXdc9NgEDpD3/vkF3qQqXM\nrJ0VL7rxSz7aIgnKLnulvNH8qcUizT2HUsXua8TzWNxrGrOGivK1YpbJDoMVXomdn/317+R76+OI\n2y7X3Wa7JC49RfvotrtAftgtQ850uQ7bH/ZnzSxnM2tVPDy9Pfk3ifqffpmUKLoNP+MKLgFg1yRZ\nsp60cgemVS4Z5P0w3G6cazap35UtJ3h8Na/84R8ApDrlugevvJ20yaLUIraqkr5QxWqVUm3/lYPc\n30gJ3F0q6VeSGMeVn90JQK/ZaofFVtw33zRNO26cf6M8q1ParuDspeJNZher8soW5JtMrxf/u1IA\nMe0+yWfckLCSelVOWqMWBFYEPPjVZwmqtPmPBZeStljlvFqwyOvQ8tNAl3R2niVJ//095G/pXfbQ\nJ1Gu98WUhdI208XI1WMByHq3oSDAcLZ8bBw3Bh0aubSqo6JWbLa3+rQ6ftfNJ3PPvU2z20tfHEDS\nt8G50RamPwDxkiHP/608IGPO/5oro2QDrjZOMRzV10TQP1LqX2/NvxqAlCW7f+A+mj6fVHdAg1vX\nwofKrJHwxo7bpMpnbOwSFr8nyUNzv7TJCIHbBg1brO77IhOA+Z17kOwSP3V1rYRPZu46le1vyYSX\n9bGEpgL7t9pVHkbjCp1Q7/WiklmB7uLGbx7nYtGgpwGoUA/zqHn3kDNZHpj4HbKK04yIaPFaAdMf\nwNFObVV7llxPtmcn5Wr/khhVcVVf58KjNloy1arLUG/OFVdQS6laNdvVLQnl2z4eS6+J6rwqhNWq\nG7Z5vRwcIFU2j494F4B51T3oPMcKW6rxEcRYsG2E00nSXCmOWJYvBv29s4ZgqEfttEu/A2B86gJq\nTel769/8hV3J3GZtOx1cGMqsr4d2ImbyxqYAcO15SzgnzhI7ElZyGiZxhkxu1pa5XtOkarvcM6NU\nrRAN0RuLdMhFo9FowoTjSqFb2LMwYGSKGtx4l8yGy0Y+zcv7ZE+K+c/K6sSkj9YHrQAbl7pt+KOU\n2y0dLkpvfOEovnxSkq07B8lxCy9+ljjl7m7ZIAmfnjtybQ/CUtFGensKrlalakXy3aS5eUHvc2L6\nfNBF9nU548o1ADyyfiQZ1r4kUaFzqQ3DsPcb6TxFQgszv76APX3lHG0KRYHGrSqmfbXaRdCqVY6N\nOfYvMqivx2grCifhBQllLO80h11+afPoj+8FoNffC+zEa6g8FwACfrbdJAp04eiJAEzYMZLNU6Rc\nsWyweA8zBk/hlvF3AdBtkiixFu1f0ggr+bb5JhenR8lvB1QJq8NrENgv3pQjLrbF5zpqAia1iTIe\nsj0SihzzxZ1kf622tg7BvWg8Rl0bxTvtlOuzk7DVoyWs5jYakp6/z78KgM7z9gf9Ihq7MCG+DfmP\nSd/OPuM5+++WF1Cj1mBE4ufhUlkjUlwjY3ZC57lMOE/KSqfPl6R69Nd5LfbgQSt0jUajCRuOS4Vu\nl7OlJrFhnMxqi86XPTH+WnIhm5+S1aPtFqrd5aIig1c9KlZcM7AHjw+V2PwuVW63ekV3IrvInHfp\nQFm5WBlwU6Vm6QnnzAbgiadG2XuU16WKeh3SdyMvpMm+2Od/LooxaXbgqHvc9iBMk7ybJMF0Wdxi\nAPJe7oPplX027F3jHKGJUx+6UtWTW0D6apUEsrwRjzskL7ZtLrbajm9D3uPSFx9lyMsL3q/qwfOz\n5HVeOa9LyZrp84X2lYTq/LUnd+G2a2T/kIeKRwCw50+dSVwpO4Imfy6e3vWPj2XCmA8BmLFUlFjU\n8uCVWGN1X3KbbO95U//FrK8TVdo3QrwVAzBasHgoWOyxGhFB6bkyVhbXyGKiDh857YR4qLA9eSs/\nER/NhrslKfl++jRAkqOlfikbrHtVcmNReRuO2kuwCiaMGPne9w8m8e8BrwENqtyJSbTKn5T4pR23\nL7+Bbs/LuCk6T9oROdaHWx1HiJ3Z48qgW+EKy23yPV/Nom6ydPmib6SKovPffMQViesWkkSbGviR\nu2t5eKUYhIf6y9tEHhvxnt3xX1WJi33zM/dRJ/eFv94kCZ/Fo54lWrXhe/XCz1dLhzBy+h8ByPm3\nVIoElfiwNiy7Lptpo2WL4Gd3yFaw3ngnnt5Sk+/cpqpsvN6G7VlDaMwMt7v5m1iFGLuaoH0SAJse\njGbBQOkLa4XwkifOIOtzteWAVcUSokSTjVqLUJPqpm+kvKzBqoWOinERkSOVNGa9HOfe4eE3w2Rd\nxAsnSN91XE7w2zr7/ZiJMpEljZCJ/KzYTbxeKqHHvhli0APu1ntPcBOsrRQS43l76CsA3LlOtg1O\nW1ViG97Qn1f6e9O4Drwy9HVAjCuAwzC5Y4F6U9MStSlZS1Zzq3sW27aGbLesLbDCHCu87bh3hSqU\nmCPn6Lm0ELON2IR+I6VevtiXwBMfyIs/slZtaXmbGqFDLhqNRhMmHDcK3fT58PYXFey9X2qqJ3d9\nn2Gfyqb42f+S2dAo3m2vHAxJaEGpTse2ErL/Iop/yhlSu1wf7cDhl5m+ba7UnqdtX2/Xgb+UfxkA\n/9PViV9NsDHFcnzKgiKyKhtCQhBk6ZhSPd6BVSQ4JDw0oaN4EEWPJ7J0v6zkXFAkrm3Vrlg6yz5Z\nRK8skP8ci9eetRKmadolituukjrzeQOfseuN570htc1pn6wFta3wMbtWpaISP93CuLTbAXh0rITV\n4v51kNeUUnapRNx7GdOZtGcQACmrGspvg26fP4AvWVz5k9pKWV53d6W9fWy1SsSlrCTk4Y1moTyp\n8tOSSVRlvpVbpZghtaYsZKV5P0A9I5FdqujlEdthpUKnVZxK1kzl4anwqhFMyMva90clo5P/mcSw\nU+WVcT4VvYktNOnx0aYmbTKdDgyveIy5M2Qdx+byXmSt3dPkuFCVlWqFrtFoNGGCcehqxmPJhem/\n/8HJGu9KtuFv8kqpby+WFXcnzxpHzpNqpZv1YtljmISzV4qqmbxJiZnlFbhcDW223mju84FawGHF\nmY3IyJDMuta5zNR2+OKaxtl294vmQGc5b1SmlKn9tucy3siXvXA63i2fmXV1vziF3nhc7BojXsjY\nceJ6DI7OZ/g82QOj10TJHZjVB1tt8YxpmnY83XtiJgDbh7u5Ypjs/pnikVcETl47hPSZMl5jv1Sx\n0hYodNM0bY+y4HpZJXnOpd+wqFD6J3aWqPfE+fktWgEZTLsan2vHy4mM6SL7ynw1VnIMzvwdx+zZ\ntXIs9dkd8T4knvQ5qaKU358+xH7xR0gT5N46zIMq52ddv8djJ1sb97v9DB9QUQan0/b2mjtmPymZ\n3KwbqRW6RqPRhAnHj0IHdl4qy8gPykZ2ZE3Zbu/VEfKKhV8YTbYSOBIOw365b6su9w4xtupxOKiY\nKsuzl50wC4Crtg2j6kq1n/XPND4O3XudH3tZhqNp+WdLFXOzzutxt6pHZlchqaXwfd/ZzPzt8uKT\njNvL7eOO+YKzwz0jDiNkff9z0lyF/rMb9MbYZYvWmz1aYdWh5vjGNE3qu0sZa0UPMeLx27x4vlf1\n93p8/OzYk68Kaew/rQNRpTLRuvLUffqVC7KWokMuGo1G8yujVRW6RqPRaI4dWqFrNBpNmKANukaj\n0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKAN\nukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpN\nmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmKANukaj0YQJ2qBrNBpNmPD/9ZEOpjYWvTUA\nAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fdca94eff98>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "samples = np.random.choice(X.shape[0], 10)\n",
+    "plt.imshow(X[samples,:].reshape(-1,20).transpose())\n",
+    "plt.axis('off');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 Vectorizing Regularized Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sigmoid(z):\n",
+    "    return float(1) / (1 + np.exp(-z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def vectorizedCostFunction(theta, X, y, gama):\n",
+    "    X = np.matrix(X)\n",
+    "    y = np.matrix(y)\n",
+    "    theta = np.matrix(theta)\n",
+    "    \n",
+    "    m, n = X.shape\n",
+    "    regArg = (float(gama) / (2*m)) * np.sum(np.square(theta[:, 1:]))\n",
+    "    firstArg = np.multiply(-y, np.log(sigmoid(X * theta.transpose())))\n",
+    "    secondArg = np.multiply(1-y, np.log(1 - sigmoid(X*theta.transpose())))\n",
+    "    return ((float(1)/m)*np.sum(firstArg-secondArg)) + regArg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def vectorizedGradient(theta, X, y, gama):\n",
+    "    X = np.matrix(X)\n",
+    "    y = np.matrix(y)\n",
+    "    theta = np.matrix(theta)\n",
+    "    \n",
+    "    m, n = X.shape\n",
+    "    regArg = (float(gama)/m) * np.c_[0, theta[:, 1:]]\n",
+    "    beta = sigmoid(X * theta.transpose()) - y\n",
+    "    grad = (float(1) / m)*X.transpose()*beta\n",
+    "    return grad + regArg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
